syntax = "proto3";

option java_package = "com.core.datastore.proto";
option java_multiple_files = true;

message UserPreferences {
    string wallet_address = 1;
    string wallet_network = 2;
}